# algorithm-freezer

./: .gitignore  .travis.yml  README.md  bintree.js  inter.cabal  stack.yaml
src/: Answers.hs  Types.hs
src/Inter/Quora/: General.hs  Strings.hs
src/bst/: README.md
submissions/bst/: README.md  begriffs.js  platypii.js
submissions/graph/: begriffs.js
submissions/hash/: README.md  begriffs.js
submissions/heapsort/: README.md  begriffs.js
submissions/mergesort/: README.md  begriffs#array.js
submissions/prio/: README.md  begriffs#heap.js  begriffs#ordered.js  begriffs#sorted.js  begriffs#unordered.js  begriffs.js
submissions/quicksort/: README.md  begriffs#inplace.js  begriffs#simple.js
submissions/rabin-karp/: README.md  begriffs.js
test/: Quora.hs  Spec.hs  bst.js  graph.js  hash.js  heapsort.js  mergesort.js  prio.js  quicksort.js  rabin-karp.js
test/Inter/Quora/: GeneralSpec.hs  StringsSpec.hs
test/helper/: load.js
