name:                inter
version:             0.1.0.0
synopsis:            Solutions to hypothetical interview questions
description:         Practice practice
homepage:            http://github.com/githubuser/inter#readme
license:             MIT
license-file:        LICENSE
author:              Joe Nelson
maintainer:          cred+github@begriffs.com
copyright:           2016 Joe Nelson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Inter.Quora.General
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , fgl
                     , matrix
                     , random-fu
                     , unordered-containers
                     , vector
                     , KMP
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables
                     , TupleSections

test-suite inter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Quora.hs
  build-depends:       base
                     , containers
                     , matrix
                     , random-fu
                     , statistics
                     , unordered-containers
                     , vector
                     , hspec
                     , inter
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/inter
